[deprecation #81] Ensure specs pass when contracts are included in top level by running specs second time with special flag on travis

--- a/script/build
+++ b/script/build
@@ -1,4 +1,6 @@
 #!/usr/bin/env bash
 
-bundle exec rspec && bundle exec cucumber
+bundle exec rspec && \
+    CONTRACTS_TOP_LEVEL_INCLUSION=true bundle exec rspec && \
+    bundle exec cucumber
 
