--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ rvm:
   - jruby-18mode # JRuby in 1.8 mode
   - jruby-19mode # JRuby in 1.9 mode
 
-script: bundle exec rspec
+script:
+  bundle exec rspec
+  bundle exec rubocop --config rubocop.yml
 bundler_args: --without development
