--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ rvm:
   - jruby-19mode # JRuby in 1.9 mode
 
 script:
-  bundle exec rspec
-  bundle exec rubocop --config rubocop.yml
+  - bundle exec rspec
+  - bundle exec rubocop --config rubocop.yml
 bundler_args: --without development
