--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ rvm:
   - jruby-18mode # JRuby in 1.8 mode
   - jruby-19mode # JRuby in 1.9 mode
 
-script: bundle exec rspec
-bundler_args: --without development
+script:
+  - bundle exec rspec
+  - ruby rubocop_test.rb
+bundler_args: --without development ruby2
