--- a/rubocop.yml
+++ b/rubocop.yml
@@ -45,6 +45,7 @@ Style/Documentation:
   Enabled: false
 
 # enforces line length of 80
+# TODO enable
 Metrics/LineLength:
   Enabled: false
 
@@ -119,4 +120,8 @@ Metrics/ParameterLists:
 
 # Checks that braces used for hash literals have or don't have surrounding space depending on configuration.
 Style/SpaceInsideHashLiteralBraces:
+  Enabled: false
+
+# TODO enable
+Style/SpecialGlobalVars:
   Enabled: false
