Init aruba/cucumber setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 
 script:
   - bundle exec rspec
+  - bundle exec cucumber
   - ruby script/rubocop.rb
 
 bundler_args: --without development
