--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,7 @@
+AllCops:
+  Exclude:
+    - "tmp/**/*"
+
 # forces method defs to have params in parens
 Style/MethodDefParentheses:
   Enabled: false
