--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
+dist: trusty
+
 language: ruby
 rvm:
-  - "1.8.7"
-  - "1.9.2"
   - "1.9.3"
   - "2.0.0"
   - "2.1"
   - "2.2"
-  - jruby-18mode # JRuby in 1.8 mode
-  - jruby-19mode # JRuby in 1.9 mode
+  - "ruby-2.3.0"
 
 before_install:
   - gem install bundler
@@ -18,3 +17,14 @@ script:
   - ruby script/rubocop.rb
 
 bundler_args: --without development
+
+matrix:
+  include:
+    - rvm: "1.8.7"
+      dist: precise
+    - rvm: "1.9.2"
+      dist: precise
+    - rvm: jruby-18mode # JRuby in 1.8 mode
+      dist: precise
+    - rvm: jruby-19mode # JRuby in 1.9 mode
+      dist: precise
