--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,11 @@
+inherit_from: .rubocop_todo.yml
+
 AllCops:
   TargetRubyVersion: 1.9
   DisplayCopNames: true
   Exclude:
     - "tmp/**/*"
+    - "spec/ruby_version_specific/*.rb"
 
 # forces method defs to have params in parens
 Style/MethodDefParentheses:
