--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,11 @@ jobs:
       rvm: "2.4.2"
     - stage: test
       script: bundle exec rspec
-      script: script/cucumber
+    - stage: test
+      script: bundle exec cucumber
+      rvm:
+        - "2.0.0"
+        - "2.1"
+        - "2.2.8"
+        - "2.3.5"
+        - "2.4.2"
