Travis: Experiment with combined rspec, cucumber test

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,9 @@ cache:
   bundler: true
 
 env:
-  - TEST_SUITE=rspec
-  - TEST_SUITE=cucumber
+  - TEST_SUITE="bundle exec rspec && bundle exec cucumber"
 
-script: bundle exec $TEST_SUITE
+script: $TEST_SUITE
 
 rvm:
   - "1.9.2"
@@ -28,8 +27,9 @@ bundler_args: --without development
 jobs:
   include:
     - stage: test
-      env: TEST_SUITE=rspec
+      env: TEST_SUITE=none
       rvm: "jruby-1.7.27"
+      script: bundle exec rspec
     - stage: codestyle
       env: TEST_SUITE=none
       script: bundle exec rubocop
