Travis: Create a separate RuboCop "Build Stage" (#271)
Run RuboCop in a separate stage so the rest of the tests don't run if RuboCop fails. Simplify travis script, add more rubies to test.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,7 @@ AllCops:
   DisplayCopNames: true
   Exclude:
     - "tmp/**/*"
+    - "vendor/**/*"
     - "spec/ruby_version_specific/*.rb"
 
 # forces method defs to have params in parens
