--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,12 +1,17 @@
 inherit_from: .rubocop_todo.yml
 
 AllCops:
-  TargetRubyVersion: 1.9
+  TargetRubyVersion: 3.0
   DisplayCopNames: true
+  NewCops: disable
   Exclude:
+    - "benchmarks/**/*"
     - "tmp/**/*"
     - "vendor/**/*"
+    - "script/**/*.rb"
+    - "spec/fixtures/*.rb"
     - "spec/ruby_version_specific/*.rb"
+    - "spec/*.rb"
 
 # forces method defs to have params in parens
 Style/MethodDefParentheses:
@@ -38,7 +43,7 @@ Lint/UnusedMethodArgument:
   Enabled: false
 
 # changes x ** 2 to x**2
-Style/SpaceAroundOperators:
+Layout/SpaceAroundOperators:
   Enabled: false
 
 # doesn't allow vars starting with _
@@ -56,7 +61,7 @@ Style/Documentation:
 
 # enforces line length of 80
 # TODO enable
-Metrics/LineLength:
+Layout/LineLength:
   Enabled: false
 
 # triggered by Contract ({ :name => String, :age => Fixnum }) => nil
@@ -101,7 +106,7 @@ Lint/DuplicateMethods:
 Style/TrivialAccessors:
   Enabled: false
 
-Style/MultilineOperationIndentation:
+Layout/MultilineOperationIndentation:
   EnforcedStyle: indented
 
 # Asks you to use %w{array of words} if possible.
@@ -111,12 +116,12 @@ Style/WordArray:
 
 # conflicts with contracts
 # we define contracts like `Baz = 1`
-Style/ConstantName:
+Naming/ConstantName:
   Enabled: false
 
 # `Contract` violates this, otherwise a good cop (enforces snake_case method names)
 # TODO possible to get this enabled but ignore `Contract`?
-Style/MethodName:
+Naming/MethodName:
   Enabled: false
 
 # checks for !!
@@ -129,9 +134,30 @@ Metrics/ParameterLists:
   Enabled: false
 
 # Checks that braces used for hash literals have or don't have surrounding space depending on configuration.
-Style/SpaceInsideHashLiteralBraces:
+Layout/SpaceInsideHashLiteralBraces:
   Enabled: false
 
 # TODO enable
 Style/SpecialGlobalVars:
   Enabled: false
+
+Style/IfUnlessModifier:
+  Enabled: false
+
+Naming/MemoizedInstanceVariableName:
+  Enabled: false
+
+Layout/FirstHashElementIndentation:
+  EnforcedStyle: consistent
+
+Layout/HashAlignment:
+  EnforcedColonStyle: table
+
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: consistent_comma
+
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: consistent_comma
+
+Style/TrailingCommaInArguments:
+  EnforcedStyleForMultiline: consistent_comma
