--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,6 +24,7 @@ jobs:
         ruby:
           - "3.1"
           - "3.0"
+          - "truffleruby-head"
         test_command:
           - "bundle exec rspec && bundle exec cucumber"
     runs-on: ${{ matrix.os }}-latest
