--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,6 +22,7 @@ jobs:
         os:
           - ubuntu
         ruby:
+          - "3.2.0-preview1"
           - "3.1"
           - "3.0"
         test_command:
