--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,15 +22,21 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu
+          - ubuntu-latest
         ruby:
           - "3.3"
           - "3.2"
           - "3.1"
           - "3.0"
-        test_command:
-          - "bundle exec rspec && bundle exec cucumber"
-    runs-on: ${{ matrix.os }}-latest
+        allow_failures:
+          - false
+        include:
+          - os: ubuntu-latest
+            ruby: ruby-head
+            allow_failures: true
+    env:
+      ALLOW_FAILURES: "${{ matrix.allow_failures }}"
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -40,4 +46,4 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - name: Test
-        run: ${{ matrix.test_command }}
+        run: "bundle exec rspec && bundle exec cucumber || $ALLOW_FAILURES"
