* Update rubocop config to use `plugins` instead of `require`

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -6,7 +6,7 @@
 # Note that changes in the inspected code, or installation of new
 # versions of RuboCop, may require this file to be generated again.
 
-require:
+plugins:
   - rubocop-performance
 
 # Offense count: 2
